<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/newsCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name_desc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/nameTv"
                style="@style/AppFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/organization"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/organizationTv"

                style="@style/AppFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/province"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/provinceTv"
                style="@style/AppFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/unique_id"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/uniqueIdTv"
                style="@style/AppFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/logout"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp"
                app:rippleColor="@color/colorSecondary"
                app:strokeColor="@color/colorSecondary"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteAccountButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/delete_account"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:rippleColor="@color/red"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>