<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardingNameFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.onboarding.OnboardingName">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/wavingDocsAV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/successfully_added"
        app:lottie_speed="1" />

    <TextView
        android:id="@+id/welcomeMessageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/whats_your_name"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/unique_id"
        android:imeOptions="actionDone"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/nameButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary" />

</LinearLayout>
